Removing unneeded mock action and fixing css for pop up modal cutting off.

--- a/src/components/layout/page.css
+++ b/src/components/layout/page.css
@@ -1,6 +1,7 @@
 .page {
   height: 100%;
   display: flex;
+  min-height: 800px;
 }
 
 .sidepanel {
